[tool.poetry]
name = "pycounts_zuer"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Zuer Zhong"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
