[tool.poetry]
name = "pycounts_zuer"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Zuer Zhong"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.11"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
